--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
           </div>
           <div class="col-md-5 col-md-offset-3">
             <!-- contact form starts -->
-            <form data-netlify="true" method="post" name="contactform" id="contact-form" class="form-horizontal">
+            <form data-netlify="true" action="contact.php" method="post" name="contactform" id="contact-form" class="form-horizontal">
               <fieldset>
                       <div class="form-group">
                         <label class="col-sm-4 control-label" for="name"></label>
