--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <span class="overlay"><span class="valign"></span><span class="title">Git / GITHUB</span></span>                  
                   </a>
               </li>
-              <li class="col-md-4 col-sm-4 col-xs-12 mix bw" data-cat="bw">
+              <li class="col-md-4 col-sm-4 col-xs-12 mix nature" data-cat="bw">
                 <a data-toggle="modal" data-target="#coco" class="mix-cover green">
                   <img class="vertical" src="img/pullo_1.png" alt="Black and White">
                   <span class="overlay"><span class="valign"></span><span class="title">pullos.com</span></span>
